added GetComments method and swagger on it
